feat: configure CORS Policy